add config postgresql and redis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# config database postgresql
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/school?useSSL=true
+spring.datasource.username=andik
+spring.datasource.password=andik
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=private
+spring.jpa.hibernate.ddl-auto=update
 
+#config cache redis
+spring.data.redis.repositories.enabled=false
+spring.cache.type=redis
+spring.cache.redis.cache-null-values=true
+spring.cache.redis.time-to-live=10000
