--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.data.redis.repositories.enabled=false
 spring.cache.type=redis
 spring.cache.redis.cache-null-values=true
 spring.cache.redis.time-to-live=10000
+#spring.redis.database=0
+spring.redis.database=1
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=andik
+spring.redis.timeout=60000
